test-latest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-latest
  labels:
    app: nginx-latest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-latest
  template:
    metadata:
      labels:
        app: nginx-latest
    spec:
      containers:
        - name: nginx
          image: nginx:latest
